# vecmath

./: .gitignore  README.md  build.py  pyproject.toml  setup.cfg  setup.py
src/vecmath/: __init__.py  vec.c  vec.py
tests/: test_vec.py
vecmath/: vec.c  vec.py
