[tool.poetry]
name = "vecmath"
version = "0.1.0"
description = "A Vector maths library written in pure python+cython"
authors = ["Eris Mathison"]
license = "MPLv2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Cython = "^0.29.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
